--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@mui/base": "^5.0.0-beta.11",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
-   
     "autoprefixer": "10.4.14",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.13",
+    "formatjs": "^0.1.1",
     "framer-motion": "^10.15.1",
     "gsap": "^3.12.2",
+    "negotiator": "^0.6.3",
     "next": "13.4.13",
     "postcss": "8.4.27",
     "react": "18.2.0",
